tests/ui/macros/unreachable-macro-panic.run.stderr
thread 'main' panicked at $DIR/unreachable-macro-panic.rs:6:5:
internal error: entered unreachable code
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
